--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <title>View Animation</title>
     <link rel="stylesheet" href="http://openlayers.org/en/v3.12.1/css/ol.css" type="text/css">
     <script src="http://openlayers.org/en/v3.12.1/build/ol.js"></script>
-    <link rel="stylesheet" href="css/jquery-ui-1.10.3.custom.css" type="text/css" charset="utf-8">
-<link rel="stylesheet" href="timeglider/Timeglider.css" type="text/css" charset="utf-8">
-<link rel="stylesheet" href="timeglider/timeglider.datepicker.css" type="text/css" charset="utf-8">
-  </head>
+    <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <body>
+    <div id="mapObjects"></div>
     <div id="map" class="map"></div>
     <button id="rotate-left" title="Rotate clockwise">↻</button>
     <button id="rotate-right" title="Rotate counterclockwise">↺</button>
@@ -19,6 +19,10 @@
     <button id="spin-to-rome">Spin to Rome</button>
     <button id="fly-to-bern">Fly to Bern</button>
     <button id="spiral-to-madrid">Spiral to Madrid</button>
-    <script src="./js/map.js"></script>
+    <!-- Begin JS includes-->
+    <script src="/js/transitions.js"></script>
+    <script src="/js/overloads.js"></script>
+    <script src="/js/classes.js"></script>
+    <script src="/js/map.js"></script>
   </body>
 </html
