added max & min, turned timeline renderer into object

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
 <footer class="page-row">
     <div id="timeline"></div>
 </footer>
-    <!-- Begin JS includes-->
-    <script src="/js/transitions.js"></script>
+    <!-- Begin JS includes
+    <script src="/js/transitions.js"></script>-->
     <script src="/js/overloads.js"></script>
     <script src="/js/classes.js"></script>
     <script src="/js/map.js"></script>
