--- a/public/index.html
+++ b/public/index.html
@@ -16,20 +16,22 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <link href="/plugins/css/multi-select.css" media="screen" rel="stylesheet" type="text/css">
+
       <style>
       .filterButton {
         top: 65px;
         left: .5em;
       }
        .editButton {
-        top: 85px;
+        top: 95px;
         left: .5em;
       }
       .ol-touch .filterButton {
         top: 80px;
       }
      .ol-touch .editButton {
-        top: 100px;
+        top: 110px;
       }
     </style>
     <script>
@@ -46,13 +48,7 @@ $(document).ready(function(){
 <footer class="page-row">
     <div id="timeline"></div>
 </footer>
-    <!-- Begin JS includes
-    <script src="/js/transitions.js"></script>-->
-    <script src="/js/overloads.js"></script>
-    <script src="/js/classes.js"></script>
-    <script src="/js/map.js"></script>
-    <script src="/js/timeline.js"></script>
-    <!--  end includes-->
+ 
     <!-- begin filter modal -->
 
     <!-- Modal -->
@@ -61,18 +57,26 @@ $(document).ready(function(){
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        <h4 class="modal-title" id="myModalLabel">Hide or show map layers</h4>
       </div>
       <div class="modal-body">
-        ...
+        <div id="filters"></div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
 </div>
 <!-- end filter modal -->
+   <script src="/plugins/js/jquery.multi-select.js" type="text/javascript"></script>
+   <!-- Begin JS includes
+    <script src="/js/transitions.js"></script>-->
+    <script src="/js/overloads.js"></script>
+    <script src="/js/classes.js"></script>
+    <script src="/js/map.js"></script>
+    <script src="/js/timeline.js"></script>
+    <!--  end includes-->
+     
   </body>
 </html
