fixed flickering bug
Removed global variable

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@ $(document).ready(function(){
     <div id="map" class="map"></div>
 </main>
 <footer class="page-row">
-    <div id="timeline"></div>
+    <div id="timeline"><div id="popup"></div></div>
 </footer>
  
     <!-- begin filter modal -->
