--- a/public/edit.html
+++ b/public/edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>COW Mapping Tool</title>
+    <title>COW Mapping Editor</title>
     <link rel="stylesheet" href="/css/mainstyle.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.11.0/vis.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.11.0/vis.min.css" type="text/css">
@@ -33,6 +33,9 @@
      .ol-touch .editButton {
         top: 110px;
       }
+      nav {
+   
+      }
     </style>
     <script>
 $(document).ready(function(){
@@ -41,13 +44,57 @@ $(document).ready(function(){
 </script>
   </head>
     <body>
-<main class="page-row page-row-expanded">
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"><i class="fa fa-map-o"></i>
+</a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="http://github.com/ZachPhillipsGary/ng-timemap-improvements-">Editor <span class="sr-only">(current)</span></a></li>
+        <li><a href="/index.html">Viewer</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-plus"></i>
+Add or Remove Data <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#"><i class="fa fa-map-marker"></i> Add Marker</a></li>
+            <li><a href="#"><i class="fa fa-map"></i> Another action</a></li>
+            <li><a href="#"<i class="fa fa-picture-o"></i> Add Image</a></li>
+            <li class="divider"></li>
+            <li><a href="#"><i class="fa fa-ban"></i> Remove</a></li>
+            <li class="divider"></li>
+            <li><a href="#"><i class="fa fa-plus-square-o"></i> Load Spreadsheet</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+
+        </div>
+        <button class="btn btn-default"><i class="fa fa-floppy-o"></i> Save</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">old</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+ <main class="page-row page-row-expanded">
     <div id="mapObjects"></div>
     <div id="map" class="map"></div>
 </main>
 <footer class="page-row">
     <div id="timeline"><div id="popup"></div></div>
 </footer>
+
  
 
     <!-- Modal -->
@@ -89,19 +136,21 @@ $(document).ready(function(){
  * Define a name space for the application.
  */
 var app = {};
+app.key = getURLParameter('key');
+if (!app.key) alert("Could not find map to load!");
 //create a time-map instance
 app.mytimeline = new timemap(app,{
 'map':'map',
 'timeline':'timeline',
 //'data': testmap,
-'key': "1-g20II9-gdF_k_KozUP3SgwDfmkW2yy7Tb513KAd3UI",
+'key': app.key,
 'debug': true
 });
-//'data':testmap,
+
 
     </script>
 
     <!--  end includes-->
      
   </body>
-</html
+</htmlxs
