--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.11.0/vis.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.11.0/vis.min.css" type="text/css">
     <link rel="stylesheet" href="http://openlayers.org/en/v3.12.1/css/ol.css" type="text/css">
-   <script src="http://openlayers.org/en/v3.12.1/build/ol.js"></script>
-<!-- <script src="http://openlayers.org/en/v3.12.1/build/ol-debug.js"></script>-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+   <script src="http://openlayers.org/en/v3.12.1/build/ol.js"></script>-->
+<!-- <script src="http://openlayers.org/en/v3.12.1/build/ol-debug.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -89,13 +89,16 @@ $(document).ready(function(){
  * Define a name space for the application.
  */
 var app = {};
+//load key from URL
+app.key = getURLParameter('key') || "";
+if (typeof app.key !== "string")
+    alert("Error: Could not find map to load.")
 //create a time-map instance
 app.mytimeline = new timemap(app,{
 'map':'map',
 'timeline':'timeline',
-//'data': testmap,
-'key': "1-g20II9-gdF_k_KozUP3SgwDfmkW2yy7Tb513KAd3UI",
-'debug': true
+'key': app.key,
+'debug': false
 });
 //'data':testmap,
 
