working on google map bug

--- a/public/index.html
+++ b/public/index.html
@@ -1,75 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>COW Mapping Tool</title>
     <link rel="stylesheet" href="/css/mainstyle.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.11.0/vis.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.11.0/vis.min.css" type="text/css">
     <link rel="stylesheet" href="http://openlayers.org/en/v3.12.1/css/ol.css" type="text/css">
-   <script src="http://openlayers.org/en/v3.12.1/build/ol.js"></script>-->
-<!-- <script src="http://openlayers.org/en/v3.12.1/build/ol-debug.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+   <!-- <script src="http://openlayers.org/en/v3.12.1/build/ol.js"></script>-->
+    <!-- --><script src="http://openlayers.org/en/v3.12.1/build/ol-debug.js"></script><!-- -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> 
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <link href="/plugins/css/multi-select.css" media="screen" rel="stylesheet" type="text/css">
-      <style>
-      .filterButton {
-        top: 65px;
-        left: .5em;
-      }
-       .editButton {
-        top: 95px;
-        left: .5em;
-      }
-      .ol-touch .filterButton {
-        top: 80px;
-      }
-     .ol-touch .editButton {
-        top: 110px;
-      }
-    </style>
-    <script>
-$(document).ready(function(){
-    $('[data-toggle="tooltip"]').tooltip(); 
-});
-</script>
-  </head>
-    <body>
-<main class="page-row page-row-expanded">
-    <div id="mapObjects"></div>
-    <div id="map" class="map"></div>
-</main>
-<footer class="page-row">
-    <div id="timeline"><div id="popup"></div></div>
-</footer>
- 
 
-    <!-- Modal -->
-<div class="modal fade" id="filterModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Hide or show map layers</h4>
-      </div>
-      <div class="modal-body">
-        <div id="filters"></div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- end filter modal -->
-   <!-- Begin JS includes -->
-   <script src="/plugins/js/jquery.multi-select.js" type="text/javascript"></script>
+    <script>
+        $(document).ready(function() {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
+</head>
+
+<body>
+    <div id="output"></div>
+    <main class="page-row page-row-expanded">
+        <div id="mapObjects"></div>
+        <div id="map" class="map"></div>
+    </main>
+    <footer class="page-row">
+        <div id="timeline">
+            <div id="popup"></div>
+        </div>
+    </footer>
+
+
+
+    <!-- end filter modal -->
+    <!-- Begin JS includes -->
+    <script src="/plugins/js/jquery.multi-select.js" type="text/javascript"></script>
+    <script src="/js/classes/gDriveSelector.js"></script>
     <script src="/js/classes/gDriveLoader.js"></script>
     <script src="/js/lib/overloads.js"></script>
     <script src="/js/classes/ui.js"></script>
@@ -84,27 +59,45 @@ $(document).ready(function(){
 
     <script src="/js/testsuite.js"></script>
     <script>
-
-/**
- * Define a name space for the application.
- */
-var app = {};
-//load key from URL
-app.key = getURLParameter('key') || "";
-if (typeof app.key !== "string")
-    alert("Error: Could not find map to load.")
-//create a time-map instance
-app.mytimeline = new timemap(app,{
-'map':'map',
-'timeline':'timeline',
-'key': app.key,
-'debug': false
-});
-//'data':testmap,
-
+        /**
+         * Define a name space for the application.
+         */
+        var app = {};
+        //load key from URL
+        app.key = getURLParameter('key');
+        if (typeof app.key !== "string") {
+          //try once to get a valid key
+            app.key = prompt("Error: Could not find map to load.", "Enter the key of the Google Drive Spreadsheet below to continue:");
+            //add the inserted key into the url
+            insertParam("key",app.key);
+        }
+            
+        //create a time-map instance
+        app.mytimeline = new timemap(app, {
+            'map': 'map',
+            'timeline': 'timeline',
+            'key': app.key,
+            'debug': false
+        });
     </script>
 
-    <!--  end includes-->
-     
-  </body>
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+</body>
 </html
