--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>COW Mapping Tool</title>
-    <link rel="stylesheet" href="/css/mainstyle.css">
+    <link rel="stylesheet" href="./css/mainstyle.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.11.0/vis.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.11.0/vis.min.css" type="text/css">
     <link rel="stylesheet" href="http://openlayers.org/en/v3.12.1/css/ol.css" type="text/css">
@@ -18,7 +18,7 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <link href="/plugins/css/multi-select.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="./plugins/css/multi-select.css" media="screen" rel="stylesheet" type="text/css">
 
     <script>
         $(document).ready(function() {
@@ -44,18 +44,18 @@
 
     <!-- end filter modal -->
     <!-- Begin JS includes -->
-    <script src="/plugins/js/jquery.multi-select.js" type="text/javascript"></script>
-    <script src="/js/classes/gDriveSelector.js"></script>
-    <script src="/js/classes/gDriveLoader.js"></script>
-    <script src="/js/lib/overloads.js"></script>
-    <script src="/js/classes/ui.js"></script>
-    <script src="/js/classes/marker.js"></script>
-    <script src="/js/classes/geojsonlayer.js"></script>
-    <script src="/js/classes/makerset.js"></script>
-    <script src="/js/classes/remotelayer.js"></script>
-    <script src="/js/classes/timeline.js"></script>
-    <script src="/js/classes/map.js"></script>
-    <script src="/js/timemap.js"></script>
+    <script src="./plugins/js/jquery.multi-select.js" type="text/javascript"></script>
+    <script src="./js/classes/gDriveSelector.js"></script>
+    <script src="./js/classes/gDriveLoader.js"></script>
+    <script src="./js/lib/overloads.js"></script>
+    <script src="./js/classes/ui.js"></script>
+    <script src="./js/classes/marker.js"></script>
+    <script src="./js/classes/geojsonlayer.js"></script>
+    <script src="./js/classes/makerset.js"></script>
+    <script src="./js/classes/remotelayer.js"></script>
+    <script src="./js/classes/timeline.js"></script>
+    <script src="./js/classes/map.js"></script>
+    <script src="./js/timemap.js"></script>
     <!-- End JS includes -->
 
     <script src="/js/testsuite.js"></script>
