--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is ng-TimeMap</h3>
 ng-TimeMap is a tool for visualizing information from a Google Drive Spreadsheet simultaneously on an online map and timeline. Only features in the visible range of the timeline are displayed on the map, allowing the view to get a since sense of how time affects a set geographic data. 
-<iframe height="600px" width="100%" src="http://mapping.wooster.edu/?key=1-g20II9-gdF_k_KozUP3SgwDfmkW2yy7Tb513KAd3UI#map=2/0/0/0">
+<iframe height="600px" width="100%" src="http://mapping.wooster.edu/em/?key=1-g20II9-gdF_k_KozUP3SgwDfmkW2yy7Tb513KAd3UI#map=2/0/0/0">
   <p>Your browser does not support iframes.</p>
 </iframe>
 <h3>
